# new_lab

./: .gitignore
2023/html_css_book/chapter4/: index.html
2023/html_css_book/chapter5/: index.html  news.html
2023/jquery-pra/chap1/: myscript.js  myweb.html
2023/js-primer/ajaxapp/: index.html  index.js
2023/js-primer/first_app/: index.html  package-lock.json
2023/js-primer/nodecli/: greet-main.js  greet.js  main.js  package-lock.json  package.json
2023/js-primer/todoapp/: index.html  index.js
2023/rust/calc_paper/: Cargo.toml
2023/rust/terminal_samp/: Cargo.toml
2024/docker-sandbox/handson/: index.html
2024/hello-ratatui/: Cargo.toml
2024/hello-ratatui/src/: main.rs
2024/introductory-haskell-programming/chap1/: first_prog.hi  first_prog.hs  hello.hi  hello.hs  qc1-2.hs
2024/introductory-haskell-programming/chap2/: q2-2.hs  q2-3.hs
2024/introductory-haskell-programming/chap3/: dd1.hs  dd2.hs  ow.hs  sumSquare1.hs  sumSquare2.hs  sumSquare3.hs  sumSquare4.hs
2024/introductory-haskell-programming/chap4/: addressLetter.hs  compLastName.hs  getLocationFunction.hs  ifeveninc.hs  myfunc.hs  names.hs  office.hs  q4-1.hs  qc4-1.hs  qc4-2.hs
2024/introductory-haskell-programming/chap5/: addressLetter.hs  chap5.hs  genHostReq.hs  quickcheck.hs
2024/introductory-haskell-programming/chap6/: check.hs  isPalindrome.hs
2024/introductory-haskell-programming/chap7/: check.hs  mygcd.hs
2024/introductory-haskell-programming/chap8/: mylength.hs
2024/introductory-haskell-programming/chap9/: chap9.hs
2024/k8s-practice-book/: pod.yaml
2024/k8s-practice-book/chapter-04/: myapp.yaml  nginx.yaml
2024/k8s-practice-book/chapter-05/: pod-destruction.yaml
2024/k8s-practice-book/chapter-06/: deployment-recreate.yaml  deployment-rollingupdate.yaml  deployment.yaml  job.yaml  replicaset.yaml  service.yaml
2024/k8s-practice-book/chapter-07/: deployment-destruction.yaml  pod-tolerations.yaml
2024/k8s-practice-book/kube-prometheus-stack/: values.yaml
2024/python-socket-book/: browser.py  chatclient.py  chatserv.py  chattcpclient.py  chattcpserver.py  client0.py  client0udp.py  client0v6.py  client1.py  getdata.py  gethostname.py  getlink.py  logclient1.py  logclient2.py  logclient3forunix.py  logserver.py  minihttpd.py  server0.py  server1.py  server1UDP.py  server1v6.py  server2.py  server3.py  simplehttpd.py  urlopen.py
2024/ratatui-async-counter/src/: main.rs  tui.rs
2024/ratatui-counter-app/: Cargo.toml
2024/ratatui-json-editor/: Cargo.toml
2024/react-remix-start/: .gitignore  package-lock.json  package.json  server.mjs
2024/rust-book-web/: Cargo.toml  Makefile  docker-compose.yml
2024/rust-book-web/migrations/: 20240130210026_init.sql  20240211122318_label.sql
2024/rust-book-web/src/: handlers.rs  main.rs  repositories.rs
2024/rust-book-web/src/handlers/: label.rs  todo.rs
2024/rust-book-web/src/repositories/: label.rs  todo.rs
2024/rust-book-web/todo-front/: package-lock.json  package.json
2024/rust-book-web/todo-front/src/: App.tsx  main.tsx
2024/rust-book-web/todo-front/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
2024/rust-book-web/todo-front/src/lib/api/: todo.ts  todo.ts_
2024/rust-book-web/todo-front/src/styles/: modal.ts
2024/rust-book-web/todo-front/src/types/: todo.d.ts
2024/rust-no-drunk-date/: Cargo.toml
2024/rust-tui-stopwatch/: Cargo.toml
2024/sukkiri-python/: chap1_1.py  chap1_2.py  chap2_1.py  chap2_2.py  chap3_1.py  chap4_1.py  chap4_2.py  chap4_3.py  chap4_4.py  chap4_5.py  chap5_1.py  chap5_2.py  chap7_1.py  chap7_2.py  chap7_3.py  chap7_4.py
2025/at-point-counter/: AGENTS.md  index.html  main.js  main.ts  styles.css
2025/elasticsearch-life-log/: index-sleep-log.json
2025/elasticsearch-python-tutorial/: Dockerfile  README.md  docker-compose.yml
2025/kubernetes-hard-way/: coredns.yaml
2025/mcp-gateway-minimal/: compose.yml
2025/mcp-gateway-sample/: .gitignore  README.md
2025/mcp-playground/: mcp-gateway-investigation.md  serena_mcp_architecture_plan.md  serena_mcp_architecture_plan_on_proxmox.md
2025/mcp-playground/first-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  README_JA.md  compose.dev.yml  compose.yml  pyproject.toml  run_server.py  setup.sh  test_server.py
2025/mcp-playground/first-mcp/src/first_mcp/: __init__.py
2025/mcp-playground/first-mcp/src/todo_mcp_server/: __init__.py  main.py  models.py  todo_manager.py
2025/mcp-proxy-aws/: .env.example  .gitignore  README.md  lambda_handler.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
2025/mcp-proxy-aws-remote-host/: main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfvars  variables.tf
2025/mcp-proxy-aws/scripts/: build.sh  start-local.sh
2025/mcp-proxy-aws/src/config/: models.py  settings.py
2025/mcp-proxy-aws/src/handlers/: echo_server.py  handler.py  proxy.py
2025/mcp-proxy-aws/src/lambda/: handler.py
2025/nginx-book-sand/: Dockerfile  Gemfile  compose.yml  nginx.conf  php-fpm.conf  tls.nginx.conf
2025/python-playground/prompt-engineering-for-generative-ai/: main.py  pyproject.toml
2025/sicp_gauche_playground/: Dockerfile  calc.scm  carmichael?.scm  coung-change.scm  fast-prime?.scm  lec1-16.scm  lec1-21.md  lec1-24.md  lec1-26.md  lec1-27.md  lec1-31.md  lec1-32a.scm  lec1-33a.scm  lecture1-5.md  lecture1-6.md  lecture1-8.scm  miller-rabin.scm  timed-prime-test.scm
2025/tool-sandbox/infra-slack-bot/: .gitignore  pyproject.toml  send_message.py
2025/transcribe-mcp-proxy/: .gitignore
2025/transcribe-mcp-proxy/proxy/: local_sse_server.py  main.py  pyproject.toml  requirements.txt
2025/transcribe-mcp-proxy/proxy/app/: config_loader.py  handler.py  mcp_aggregator.py  mcp_wrapper.py  models.py
2026/ansible-book-beginner/: Dockerfile
2026/k3s-construction/: argocd-install.yaml  cert-manager-ca.yaml  cert-nginx.yaml  longhorn-ui.yaml  metallb.yaml  prometheus-values.yaml  test-longhorn-pvc.yaml
2026/python-network-book/: CLAUDE.md  main.py  node.py  node2.py  pyproject.toml
2026/terraform-iac-book/: backend.tf  outputs.tf  provider.tf  resources.tf
(+609 files in other folders)
