[project]
name = "mcp-proxy-aws"
version = "0.1.0"
description = "MCP Proxy Server for AWS Lambda"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",  # 追加
    "python-dotenv>=1.0.0",
    "mangum>=0.17.0",  # Lambda用のASGIアダプター
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "aws-sam-cli>=1.100.0",  # ローカルテスト用
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]