[project]
name = "first-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shooonng", email = "5511068t@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pathlib>=1.0.1",
    "pydantic>=2.0.0",
    "typing>=3.10.0.0",
]

[project.scripts]
first-mcp = "first_mcp:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
