[project]
name = "prompt-engineering-for-generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "accelerate==0.29.3",
    "aiofiles==23.2.1",
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "altair==5.3.0",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "babel==2.14.0",
    "backoff==2.2.1",
    "bcrypt==4.1.2",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "blis==0.7.11",
    "bottleneck==1.3.8",
    "build==1.2.1",
    "cachetools==5.3.3",
    "catalogue==1.0.2",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "chroma-hnswlib==0.7.3",
    "chromadb==0.4.24",
    "click==8.1.7",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "cymem==2.0.8",
    "dataclasses-json==0.6.4",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "deepdiff==7.0.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.14",
    "diffusers==0.27.2",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "docx2txt==0.8",
    "emoji==2.11.1",
    "exceptiongroup==1.2.1",
    "executing==2.0.1",
    "faiss-cpu==1.8.0",
    "fastapi==0.110.2",
    "fastjsonschema==2.19.1",
    "ffmpy==0.3.2",
    "filelock==3.13.4",
    "filetype==1.2.0",
    "flatbuffers==24.3.25",
    "fonttools==4.51.0",
    "fqdn==1.5.1",
    "frozenlist==1.4.1",
    "fsspec==2024.3.1",
    "ftfy==6.2.0",
    "gensim==4.3.2",
    "getpass2==1.0.2",
    "glob2==0.7",
    "google-api-core==2.18.0",
    "google-auth==2.29.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.16.0",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.7.0",
    "google-search-results==2.4.2",
    "googleapis-common-protos==1.63.0",
    "gradio==4.27.0",
    "gradio-client==0.15.1",
    "greenlet==3.0.3",
    "grpcio==1.62.2",
    "h11==0.14.0",
    "html2text==2024.2.26",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.22.2",
    "humanfriendly==10.0",
    "idna==3.7",
    "importlib-metadata==7.0.0",
    "importlib-resources==6.4.0",
    "iniconfig==2.0.0",
    "ipykernel==6.29.4",
    "ipython==8.18.1",
    "ipywidgets==8.1.2",
    "isoduration==20.11.0",
    "jedi==0.19.1",
    "jinja2==3.1.3",
    "joblib==1.4.0",
    "json5==0.9.25",
    "jsonpatch==1.33",
    "jsonpath-python==1.0.6",
    "jsonpointer==2.4",
    "jsonschema-specifications==2023.12.1",
    "jsonschema[format-nongpl]==4.21.1",
    "jupyter-client==8.6.1",
    "jupyter-core==5.7.2",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.1.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.1",
    "jupyterlab-widgets==3.0.10",
    "kiwisolver==1.4.5",
    "kubernetes==29.0.0",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-core==0.1.45",
    "langchain-experimental==0.0.57",
    "langchain-mistralai==0.1.2",
    "langchain-openai==0.1.3",
    "langchain-text-splitters==0.0.1",
    "langchainhub==0.1.15",
    "langdetect==1.0.9",
    "langsmith==0.1.49",
    "lark==1.1.9",
    "lxml==5.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.21.1",
    "matplotlib==3.8.4",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "mmh3==4.1.0",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "murmurhash==1.0.10",
    "mypy-extensions==1.0.0",
    "natsort==8.4.0",
    "nbclient==0.10.0",
    "nbconvert==7.16.3",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "nltk==3.8.1",
    "notebook==7.1.3",
    "notebook-shim==0.2.4",
    "numexpr==2.10.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "onnxruntime==1.16.3",
    "openai==1.23.2",
    "opentelemetry-api==1.24.0",
    "opentelemetry-exporter-otlp-proto-common==1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.24.0",
    "opentelemetry-instrumentation==0.45b0",
    "opentelemetry-instrumentation-asgi==0.45b0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-proto==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-semantic-conventions==0.45b0",
    "opentelemetry-util-http==0.45b0",
    "ordered-set==4.1.0",
    "orjson==3.10.1",
    "overrides==7.7.0",
    "packaging==23.2",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pdf2image==1.17.0",
    "pexpect==4.9.0",
    "pillow==10.3.0",
    "pinecone-client==3.2.2",
    "plac==1.1.3",
    "platformdirs==4.2.0",
    "playwright==1.43.0",
    "pluggy==1.5.0",
    "posthog==3.5.0",
    "preshed==3.0.9",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.43",
    "proto-plus==1.23.0",
    "protobuf==4.25.3",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pulsar-client==3.5.0",
    "pure-eval==0.2.2",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pycparser==2.22",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "pydub==0.25.1",
    "pyee==11.1.0",
    "pygments==2.17.2",
    "pymongo==4.6.3",
    "pyparsing==3.1.2",
    "pypdf==4.2.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.0.0",
    "pytest==8.1.1",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.4.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "python-iso639==2024.2.7",
    "python-json-logger==2.0.7",
    "python-magic==0.4.27",
    "python-multipart==0.0.9",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==26.0.2",
    "rapidfuzz==3.8.1",
    "referencing==0.34.0",
    "regex==2024.4.16",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.7.1",
    "rpds-py==0.18.0",
    "rsa==4.9",
    "ruff==0.4.1",
    "safetensors==0.4.3",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "sentence-transformers==2.7.0",
    "serpapi==0.1.5",
    "shellingham==1.5.4",
    "six==1.16.0",
    "smart-open==7.0.4",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "spacy==2.3.9",
    "sqlalchemy==2.0.29",
    "srsly==1.0.7",
    "stack-data==0.6.3",
    "starlette==0.37.2",
    "sympy==1.12",
    "tabulate==0.9.0",
    "tenacity==8.2.3",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "thinc==7.4.6",
    "threadpoolctl==3.4.0",
    "tiktoken==0.6.0",
    "tinycss2==1.3.0",
    "tokenizers==0.15.2",
    "tomli==2.0.1",
    "tomlkit==0.12.0",
    "toolz==0.12.1",
    "torch==2.2.2",
    "tornado==6.4",
    "tqdm==4.66.2",
    "traitlets==5.14.3",
    "transformers==4.39.3",
    "typer==0.12.3",
    "types-python-dateutil==2.9.0.20240316",
    "types-requests==2.31.0.20240406",
    "typing-extensions==4.11.0",
    "typing-inspect==0.9.0",
    "tzdata==2024.1",
    "unstructured-client==0.22.0",
    "unstructured[docx]==0.13.3",
    "uri-template==1.3.0",
    "urllib3==2.2.1",
    "uvicorn[standard]==0.29.0",
    "uvloop==0.19.0",
    "wasabi==0.10.1",
    "watchfiles==0.21.0",
    "wcwidth==0.2.13",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.7.0",
    "websockets==11.0.3",
    "widgetsnbextension==4.0.10",
    "wrapt==1.16.0",
    "yarl==1.9.4",
    "zipp==3.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
