[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "fastmcp>=0.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.5.0",
]
